# apartment_layout_control

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  run.py  setup.cfg
.github/workflows/: build.yaml
docs/: EXPERIMENTS.md  ml_system_design_doc.md
experimental_prompts/: exp_1.0.txt  exp_1.1.txt  exp_1.2.txt  exp_1.3.txt  exp_1.4.txt  exp_1.5.txt  exp_2.0.txt  exp_2.1.txt  exp_2.2.txt  exp_2.3.txt  exp_2.5.txt  exp_3.0.txt  exp_3.1.txt  exp_3.2.txt  exp_3.3.txt  exp_4.0.txt  exp_4.1.txt  exp_4.2.txt  exp_4.3.txt  exp_5.0.txt  exp_5.1.txt  exp_5.2.txt  exp_5.3.txt
notebooks/: EDA.ipynb
scripts/: run_model_serving.sh  test_model.py
src/bot/: config.py  main.py  serverless.py
src/bot/handlers/: __init__.py  commands.py  message_handlers.py  prompts.py  vllm.py
src/utils/: logger.py
